[package]
name = "fr32-reader"
version = "0.1.0"
authors = ["Zhao KK <kikakkz@hotmail.com>"]

[dependencies]
filecoin-proofs = { path = "../../filecoin-proofs" }
storage-proofs = { path = "../../storage-proofs" }
rand = "0.7"
rand_xorshift = "0.2.0"
paired = "0.18.0"
fil_logger = "0.1"
chrono = "0.4"
